# treecl

./: .gitignore  Cargo.toml  README.md  TASKS.md  build_errors.txt  debug_output.txt  gemini_findings.md  init_lisp_dump.txt  load_input.txt  next_steps.md  output_basics.txt  output_float_2.txt  output_inc.txt  output_search_robust_final_debug.txt  output_search_robust_verbose_2.txt  output_simple.txt  output_simple_2.txt  output_stem.txt  output_user_data.txt  prompt.md  repro.tr  smoke.tr  test_integration.sh  tree.dot  verify_basics.tr  verify_compile_execution.tr  verify_complex_score.tr  verify_float.tr  verify_format.tr  verify_inc.tr  verify_inspect_n.tr  verify_n_integrity.tr  verify_override_n.tr  verify_refined.tr  verify_reproduce_full.tr  verify_reproduce_oneline.tr  verify_search_robust.tr  verify_search_robust_2.tr  verify_search_simple.tr  verify_simple.tr  (+7 more)
debugger/: CMakeLists.txt  backend_connector.cpp  backend_connector.h  main.cpp
debugger/ui/: main.qml
references/: Art of Metaobject Protocol.txt  knowledge_base.md  tasks.md
src/: arena.rs  arrays.rs  asdf.lisp  clos.rs  compiler.rs  conditions.rs  context.rs  counters.rs  debug.rs  engine.rs  eval.rs  gc.rs  hashtables.rs  init.lisp  init_new.lisp  lambda_parser_draft.rs  lib.rs  main.rs  main.rs.deprecated  mp.rs  parser.rs  pathname.rs  pattern.rs  primitives.rs  primitives_concurrency.rs.inc  primitives_draft.rs  printer.rs  process.rs  reader.rs  readtable.rs  scheduler.rs  search.rs  streams.rs  symbol.rs  syscall.rs  tree_calculus.rs  types.rs
tests/: block_test.lisp  clos_test.lisp  (+33 more)
(+4 files in other folders)
