[package]
name = "triage-rs"
version = "0.2.0"
edition = "2026"
default-run = "treecl"

[dependencies]
num-bigint = "0.4"
num-traits = "0.2"
smallvec = { version = "1.13", features = ["union", "const_new"] }
rustc-hash = "1.1"
rand = "0.9.2"
rayon = "1.10"
ghost-cell = "0.2.6"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
clap = { version = "4.5.54", features = ["derive"] }

