[package]
name = "treecl"
version = "0.1.0"
edition = "2021"
default-run = "treecl"

[dependencies]
num-bigint = "0.4.6"
num-traits = "0.2.19"
smallvec = { version = "1.13", features = ["union", "const_new"] }
rustc-hash = "1.1"
rand = "0.9.2"
rayon = "1.10"
ghost-cell = "0.2.6"
crossbeam = "0.8"
crossbeam-deque = "0.8"
dashmap = "6.0"
rustyline = "14.0"

